# VideoRenderPlugin

./: .gitignore  CMakeLists.txt  nv12render_gpu.cpp  nv12render_gpu.h  videorender.h
Nv12Render_Gpu/: CMakeLists.txt  nv12render_gpu.cpp  nv12render_gpu.h
Nv2RGBRender_Gpu/: CMakeLists.txt  ColorSpace.h  nv2rgbrender_gpu.cpp  nv2rgbrender_gpu.h
